styles/style_main.css
/* Fonts (we serve our own fonts :D #fuckgoogle) */
@font-face { font-family: 'Share Tech'; src: url(../fonts/Share-Tech/ShareTech-Regular.ttf) format('woff2'); }
@font-face { font-family: 'Share Tech Mono'; src: url(../fonts/Share-Tech/ShareTechMono-Regular.ttf) format('woff2'); }
@font-face { font-family: 'Bitter'; src: url(../fonts/Bitter/Bitter-VariableFont_wght.ttf) format('woff2'); }

body {
    background-image: url("/img/background.jpg");

    background-repeat: no-repeat;
    background-size: cover;
}

/* *flexes your boxes*/
.container {
    padding-top: 10vh;
    display: flex;
    flex-direction: column;
} 


img.art_temp { /* we still need to redo this to the final, thing. */
    width: 50%;
    align-self: center;
    padding-top: 5vh;
    padding-bottom: 5vh;
}

div.taskbar {
    position: absolute;

    left: 0px;
    top: 0px;
    width: 100%;

    height: 31px;
    background: #c3c3c3;
    box-shadow: inset -1px -1px black;
}

/* Probably not the right way to do this, but it will suffice I guess. */
div.window_titlebar {
    position: absolute;

    left: 0px;
    top: 0px;
    width: 100%;

    height: 22px;
    background: navy;
}

div.window {
    position: relative
    ;
    border-style: ridge;
    border-width: 5px;
    border-color: #c3c3c3;
    
    width: 60vw;
    padding: 10px;
    align-self: center;
    background-color: white;
}


/* Fonts */

h1 { 
    font-family: 'Bitter', serif;
    font-size: 20pt;
    
    color: white;

    display: inline;
    align-self: center;
}

h2 {
    padding-top: 5px;
    font-family: 'Share Tech', serif;
}

h3 {
    display: inline;
    padding-left: 2px;
    font-family: 'Bitter', serif;
    font-size: 11pt;
    
    color: white;
}

p {
    font-family: 'Bitter', serif; 
    font-weight: 450;
}

